src/objects/Maize_GAPs_Adoption__c.object
<CustomObject>
    <fields>
        <fullName>Time_of_Land_Preparation__c</fullName>
        <inlineHelpText>NA caters for the situation when a farmer did not choose G1 as one of their 5 GAPs</inlineHelpText>
        <label>GAP 1.2 Time of Land Preparation</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At the end of the first rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At the onset of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 weeks before onset of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One month before onset of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two months before onset of rains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_of_Planting__c</fullName>
        <label>GAP 2.1 Time of Planting</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At the beginning of the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Towards end of the rainy season</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Seed_Used_for_Planting__c</fullName>
        <label>GAP 3.1 Type of Seed Used for Planting</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Own saved seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local variety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved seed e.g. Longe 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Types_of_Fertilizers_used__c</fullName>
        <label>GAP 4.2 Types of Fertilizers used</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super gro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Use_Records_to_Make_Decisions__c</fullName>
        <label>GAP 8.1 Use Records to Make Decisions</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Addition__c</fullName>
        <label>GAP 6.5 Value Addition</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Maize GAPs Adoption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MGA{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Maize GAPs Adoption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maize GAPs Adoptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>